[gd_scene load_steps=3 format=2]

[ext_resource path="res://dlgs/new_column_dlg.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/roboto_14.tres" type="DynamicFont" id=2]

[node name="new_column_dlg" type="AcceptDialog"]
margin_right = 622.0
margin_bottom = 71.0
focus_next = NodePath("table_info/table_edt")
focus_mode = 1
popup_exclusive = true
window_title = "New table"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="column_info" type="HBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 614.0
margin_bottom = 35.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="column_type_lbl" type="Label" parent="column_info"]
margin_top = 5.0
margin_right = 93.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Column type:    "

[node name="column_type_opt" type="OptionButton" parent="column_info"]
margin_left = 97.0
margin_right = 197.0
margin_bottom = 27.0
rect_min_size = Vector2( 100, 0 )

[node name="column_name_lbl" type="Label" parent="column_info"]
margin_left = 201.0
margin_top = 5.0
margin_right = 302.0
margin_bottom = 22.0
custom_fonts/font = ExtResource( 2 )
text = "Column name:    "

[node name="column_name_edt" type="LineEdit" parent="column_info"]
margin_left = 306.0
margin_right = 606.0
margin_bottom = 27.0
rect_min_size = Vector2( 300, 20 )
custom_fonts/font = ExtResource( 2 )
